@@ -63,11 +63,13 @@ DBIx::Class::QueryLog 'logs' each transaction and query executed so you can
 analyze what happened in the 'session'.  It must be installed as the debugobj
 in DBIx::Class:
 
-    use DBIx::Class::QueryLog;
+    use DBIx::Class::QueryLog::NotifyOnMax;
     use DBIx::Class::QueryLog::Analyzer;
 
     my $schema = ... # Get your schema!
-    my $ql = DBIx::Class::QueryLog->new;
+    my $ql = DBIx::Class::QueryLog::NotifyOnMax->new(
+        max_count => 100,
+    );
     $schema->storage->debugobj($ql);
     $schema->storage->debug(1);
       ... # do some stuff!
@@ -93,6 +95,10 @@ If you wish to have the QueryLog collecting results, and the normal trace
 output of SQL queries from DBIx::Class, then set C<passthrough> to 1
 
   $ql->passthrough(1);
+
+Note that above the example uses L<DBIx::Class::QueryLog::NotifyOnMax> instead
+of the vanilla C<DBIx::Class::QueryLog>, this is simply to encourage users to
+use that and hopefully avoid leaks.
 
 =head1 BUCKETS
 
@@ -286,5 +292,19 @@ C<DBIx::Class::QueryLog::Transaction>.
 sub query_class       { 'DBIx::Class::QueryLog::Query' }
 
 sub transaction_class { 'DBIx::Class::QueryLog::Transaction' }
+
+=head2 SEE ALSO
+
+=over
+
+=item * L<DBIx::Class::QueryLog::NotifyOnMax>
+
+=item * L<DBIx::Class::QueryLog::Tee>
+
+=item * L<DBIx::Class::QueryLog::Conditional>
+
+=back
+
+=cut
 
 1;
