@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Add ::NotifyOnMax subclass to help avoid leaks
 
 1.004001  2015-11-25 22:00:20-08:00 America/Los_Angeles
   - Fix regression in ::Transaction->count (Thanks Alexander Hartmaier!)
